Few minor changes, removed out some commented code

--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f040e06d",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
     "dependent_col = [\"fire\"]\n",
     "\n",
     "# Load in the training dataset\n",
-    "training_data = pd.read_csv(training_file, usecols=independent_cols + dependent_cols)\n",
+    "training_data = pd.read_csv(training_file, usecols=independent_cols + dependent_col)\n",
     "print(training_data.head())\n",
     "print(training_data.shape)"
    ]
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "id": "236fa7b5",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "b89de1af",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,6 @@
     "plt.xlabel('Solver')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.title('Logistic Regression: Accuracy by Solver')\n",
-    "#plt.xticks([i + bar_width / 2 for i in x], solver_values)\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.legend()\n",
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "b630cf3f",
    "metadata": {},
    "outputs": [
@@ -447,7 +446,6 @@
     "            acc_train = metrics.accuracy_score(y_train, predictions_training)\n",
     "            acc_test = metrics.accuracy_score(y_test, predictions_test)\n",
     "            results.append({\"C\": c, \"Solver\": solver, \"Training Accuracy\": acc_train, \"Test Accuracy\": acc_test})\n",
-    "            #print(f\"C: {c}, Solver: {solver} => Training accuracy: {acc_train:.4f}, Test accuracy: {acc_test:.4f}\")\n",
     "        except Exception as e:\n",
     "            results.append({\"C\": c, \"Solver\": solver, \"Training Accuracy\": None, \"Test Accuracy\": None})\n",
     "            print(f\"C: {c}, Solver: {solver} => Error: {e}\")\n",
